force-app/main/default/objects/Optimo_Import__c/Optimo_Import__c.object-meta.xml
<CustomObject>
    <description>Used for importing large data into Salesforce from Optimo</description>
    <label>Optimo Import</label>
    <nameField>
        <label>Optimo Import</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Optimo Imports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>