force-app/main/default/objects/Optimo_Import__c/fields/Alarm_Code__c.field-meta.xml
<CustomField>
    <fullName>Alarm_Code__c</fullName>
    <label>Alarm Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>