force-app/main/default/objects/Optimo_Import__c/fields/Break__c.field-meta.xml
<CustomField>
    <fullName>Break__c</fullName>
    <label>Break</label>
    <length>255</length>
    <type>Text</type>
</CustomField>