force-app/main/default/objects/Optimo_Import__c/fields/Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Time__c</fullName>
    <label>Check-in Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>