force-app/main/default/objects/Optimo_Import__c/fields/Completed_at__c.field-meta.xml
<CustomField>
    <fullName>Completed_at__c</fullName>
    <label>Completed at</label>
    <type>DateTime</type>
</CustomField>