force-app/main/default/objects/Optimo_Import__c/fields/Connected_Fixture__c.field-meta.xml
<CustomField>
    <fullName>Connected_Fixture__c</fullName>
    <label>Connected Fixture</label>
    <length>255</length>
    <type>Text</type>
</CustomField>