force-app/main/default/objects/Optimo_Import__c/fields/Coordination_tag__c.field-meta.xml
<CustomField>
    <fullName>Coordination_tag__c</fullName>
    <label>Coordination tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>