force-app/main/default/objects/Optimo_Import__c/fields/Day_of_week__c.field-meta.xml
<CustomField>
    <fullName>Day_of_week__c</fullName>
    <label>Day of week</label>
    <length>255</length>
    <type>Text</type>
</CustomField>