force-app/main/default/objects/Optimo_Import__c/fields/Driver_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Driver_Serial_Number__c</fullName>
    <label>Driver Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>