force-app/main/default/objects/Optimo_Import__c/fields/Duration_in_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Seconds__c</fullName>
    <label>Duration in Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>