force-app/main/default/objects/Optimo_Import__c/fields/End_time__c.field-meta.xml
<CustomField>
    <fullName>End_time__c</fullName>
    <label>End time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>