force-app/main/default/objects/Optimo_Import__c/fields/Exceptions__c.field-meta.xml
<CustomField>
    <fullName>Exceptions__c</fullName>
    <label>Exceptions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>