force-app/main/default/objects/Optimo_Import__c/fields/License_plate_number__c.field-meta.xml
<CustomField>
    <fullName>License_plate_number__c</fullName>
    <label>License plate number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>