force-app/main/default/objects/Optimo_Import__c/fields/Location_Link__c.field-meta.xml
<CustomField>
    <fullName>Location_Link__c</fullName>
    <label>Location Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>