force-app/main/default/objects/Optimo_Import__c/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <label>Location Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>