force-app/main/default/objects/Optimo_Import__c/fields/Multi_Service_Site__c.field-meta.xml
<CustomField>
    <fullName>Multi_Service_Site__c</fullName>
    <label>Multi-Service Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>