force-app/main/default/objects/Optimo_Import__c/fields/Notification_Method__c.field-meta.xml
<CustomField>
    <fullName>Notification_Method__c</fullName>
    <label>Notification Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>