force-app/main/default/objects/Optimo_Import__c/fields/Notification_Preference__c.field-meta.xml
<CustomField>
    <fullName>Notification_Preference__c</fullName>
    <label>Notification Preference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>