force-app/main/default/objects/Optimo_Import__c/fields/OptimoRoute_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>OptimoRoute_Order_ID__c</fullName>
    <label>OptimoRoute Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>