force-app/main/default/objects/Optimo_Import__c/fields/Photos__c.field-meta.xml
<CustomField>
    <fullName>Photos__c</fullName>
    <label>Photos</label>
    <type>Url</type>
</CustomField>