force-app/main/default/objects/Optimo_Import__c/fields/PoD_Note__c.field-meta.xml
<CustomField>
    <fullName>PoD_Note__c</fullName>
    <label>PoD - Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>