force-app/main/default/objects/Optimo_Import__c/fields/Route_date__c.field-meta.xml
<CustomField>
    <fullName>Route_date__c</fullName>
    <label>Route date</label>
    <type>Date</type>
</CustomField>