force-app/main/default/objects/Optimo_Import__c/fields/Route_distance_mi__c.field-meta.xml
<CustomField>
    <fullName>Route_distance_mi__c</fullName>
    <label>Route distance [mi]</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>