force-app/main/default/objects/Optimo_Import__c/fields/Route_duration__c.field-meta.xml
<CustomField>
    <fullName>Route_duration__c</fullName>
    <label>Route duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>