force-app/main/default/objects/Optimo_Import__c/fields/Route_travel_time__c.field-meta.xml
<CustomField>
    <fullName>Route_travel_time__c</fullName>
    <label>Route travel time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>