force-app/main/default/objects/Optimo_Import__c/fields/Scheduled_at__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_at__c</fullName>
    <label>Scheduled at</label>
    <length>255</length>
    <type>Text</type>
</CustomField>