force-app/main/default/objects/Optimo_Import__c/fields/Scheduled_date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_date__c</fullName>
    <label>Scheduled date</label>
    <type>Date</type>
</CustomField>