force-app/main/default/objects/Optimo_Import__c/fields/Secondary_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Time_Window__c</fullName>
    <label>Secondary Time Window</label>
    <length>255</length>
    <type>Text</type>
</CustomField>