force-app/main/default/objects/Optimo_Import__c/fields/Service_Needed_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Needed_Number__c</fullName>
    <label>Service Needed Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>