force-app/main/default/objects/Optimo_Import__c/fields/Services_Name__c.field-meta.xml
<CustomField>
    <fullName>Services_Name__c</fullName>
    <label>Services Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>