force-app/main/default/objects/Optimo_Import__c/fields/Skills_1__c.field-meta.xml
<CustomField>
    <fullName>Skills_1__c</fullName>
    <label>Skills</label>
    <length>255</length>
    <type>Text</type>
</CustomField>