force-app/main/default/objects/Optimo_Import__c/fields/Start_time__c.field-meta.xml
<CustomField>
    <fullName>Start_time__c</fullName>
    <label>Start time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>