force-app/main/default/objects/Optimo_Import__c/fields/Stop_Number__c.field-meta.xml
<CustomField>
    <fullName>Stop_Number__c</fullName>
    <label>Stop Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>