force-app/main/default/objects/Optimo_Import__c/fields/stops__c.field-meta.xml
<CustomField>
    <fullName>stops__c</fullName>
    <label># stops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>