force-app/main/default/objects/Optimo_Import__c/fields/Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Time_Window__c</fullName>
    <label>Time Window</label>
    <length>255</length>
    <type>Text</type>
</CustomField>