force-app/main/default/objects/Optimo_Import__c/fields/Tracking_Link__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Link__c</fullName>
    <label>Tracking Link</label>
    <type>Url</type>
</CustomField>