force-app/main/default/objects/Optimo_Import__c/fields/Vehicle_features__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_features__c</fullName>
    <label>Vehicle features</label>
    <length>255</length>
    <type>Text</type>
</CustomField>