force-app/main/default/objects/Optimo_Import__c/fields/Vehicle_Label__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Label__c</fullName>
    <label>Vehicle Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>