force-app/main/default/objects/Optimo_Import__c/fields/Volume_1__c.field-meta.xml
<CustomField>
    <fullName>Volume_1__c</fullName>
    <label>Volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>