force-app/main/default/objects/Optimo_Import__c/fields/Waiting_Time__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time__c</fullName>
    <label>Waiting Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>