force-app/main/default/objects/Optimo_Import__c/fields/Waiting_Time_sec__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Time_sec__c</fullName>
    <label>Waiting Time [sec]</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>